# teams-notifications

./: .gitignore  README.md
chrome-extension/: com.teams_notifications.host.json  content-script.js  manifest.json  relay.js  service-worker.js
daemon/: pyproject.toml
daemon/src/teams_notifications/: config.py  graph_api.py  main.py  native_host.py  notifications.py  reminders.py  settings_ui.py  socket_server.py  state.py  tray.py  watchdog.py
daemon/tests/: test_config.py  test_graph_api.py  test_reminders.py  test_state.py  test_watchdog.py
docs/superpowers/plans/: 2026-04-03-teams-notifications-daemon.md
docs/superpowers/specs/: 2026-04-03-teams-notifications-design.md
scripts/: install.sh  launch-teams.sh  native-host.sh  setup-azure.sh  uninstall.sh
systemd/: teams-notifications.service
