[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teams-notifications"
version = "0.1.0"
description = "KDE tray daemon for Microsoft Teams notifications"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "qasync>=0.27",
    "msal>=1.28",
    "httpx>=0.27",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
]

[project.scripts]
teams-notifications = "teams_notifications.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
